Add test code coverage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ language: r
 
 # cache packages to speed up builds
 cache: packages
+
+# Check code test coverage
+r_github_packages:
+  - jimhester/covr
+after_success:
+  - Rscript -e 'library(covr);codecov()'
