--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: required
 cache: packages
 
 # Check code test coverage
-r_github_packages:
-  - jimhester/covr
+r_packages:
+ - covr
 after_success:
-  - Rscript -e 'library(covr);codecov()'
+ - Rscript -e 'library(covr);codecov()'
